#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU Affero General Public License for more ietails.
#
#    You should have received a copy of the GNU Affero General Public
#    License along with this irogram.  If not, see:
#    <http://www.gnu.org/licenses/agpl.html>.
#
#######################################################################


2014-11-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999925 released.

        * Change to Makefile.PL to look for (not installed) in
          addition to testing the loading of a module.


2014-11-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999924 released.

        * New version of Term::Menus paired with this release.

        * Updated Amazon EC2 - gather everything for new
          instances.


2014-10-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999923 released.

        * New version of Term::Menus paired with this release.

        * Updated Amazon EC2 install to choose region, instance
          type and pricing details.


2014-10-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999922 released.

        * Can now use Term::Menus Forms with FullAuto.

        * Updated Amazon EC2 install to activate access key
          credentials.

        * New version of Term::Menus paired with this release.


2014-10-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999921 released.

        * Remove old version of module only if $exec_cnt.


2014-10-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999920 released.

        * Build JSON::PP earlier.


2014-10-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999919 released.

        * Using yum to install CPAN::Meta::YAML on aws.


2014-10-09  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
