@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 23e96a3fb1d2c0bb5d682155f352208d939aa550 ChangeLog
+SHA1 ed4c18752106269d5c5539cf588a5cef47f7985e ChangeLog
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 e3ab438d5df16ebbbe11679825b593a21eafc714 MANIFEST
-SHA1 50c7271a6fecfe901b7a97a0c02ec19cff10cb94 META.yml
-SHA1 590f9e3ac8b453d33e4750aa7a74ee6229a57f33 Makefile.PL
+SHA1 463f8696c17e2c874496457dcf4b61e755925a04 META.yml
+SHA1 39956ac6cce9545c971da88e86eeb1fcef03a081 Makefile.PL
 SHA1 7a59a87222485f6c0e7026b30c8195c47823b3b5 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -122,7 +122,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 3225eb51f9b991f4b0e1d06c7291cf7ee736c954 lib/Net/FullAuto.pm
+SHA1 ca311aea53e4a6f6aed481b7a0bf1ceb36e26845 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 e3db77a102d58a41e7403e85ea9740ba0eeceb67 lib/Net/FullAuto/Distro/fa_code.pm
@@ -133,17 +133,17 @@ SHA1 fe312c3ed58aac44bd3bebb39bef97df2c70ecad lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 bde47d7e159545b9a32c518527e122b5c5231901 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 15b442ad7e268218b9156d48bba27c6d84ebcb57 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 038fb9729e7e490990969eca29835ab14caba264 lib/Net/FullAuto/FA_Core.pm
+SHA1 58399c20becc801eefe2743e6dad148b128ae763 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJUVtpFAAoJEBa/9Pad787E1VIIAKUHZ2D7ogcU6FiRTkxuOcMD
-PWlHuNN3VuTnhfxzV9S7OWYKZGNpAwqyxS3ANzVvrYJg3bJjOZ0mjz9QrA1YZyzf
-br6uLzDokAEk3Q3jpuo7ZEiJlPQvM5vHaKyH36KEKyGe7WiCH0lgkfkPxG4m1Uk4
-9wNJvuHdZH3PbiSGpFnltWaaIsv/vs3F+RAvAJtsZPSlyas0cjC46vgDUrIssO7p
-H/cguX/4O8Y6wC80EAsk71fHa+JWWlNWrrzy4naFKgszjwuZNDvaG44Z2HFVHuRy
-XdaGFF0E7lqfDSot23Oy5MuhrdyPIuRlV5QzQDP+KFC73PHwgm1exqs7HznyNG4=
-=wxXm
+iQEcBAEBAgAGBQJUXUXLAAoJEBa/9Pad787Exn8H+wXUfxnblI4lSXDmYmXSGjvS
+B+A7dnQ1dVyt7V+7QKn5K0Zc3z4f9vPx0wrxGN/pFIzjK/atNAjuUx9c/R0mii3Q
+RwZ8CdlkG96dktbKW0P+U4iNiAIEg6PkqjWN7t8QrtcPISdNzOWJYsU+OIv2Zwim
+slUnGwFMSkI83waVxSx7rcMJfpaHQ+uEt4vRuFwwH0d2FEUA8mFpgvt/n1BI5wx4
+Kwkrjgvs16BH8idz1FcV4Xw2bMogtIqEN/3Rn1d6XhkfEWc0X5ssSXhBIxOpaphV
+vWB+qMmWXl+pwQFJmCAFtLoI7gTS7z5+MVgaQuX54GqAbycl5cS7uGzPz8mW29c=
+=1/Wm
 -----END PGP SIGNATURE-----
