@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.999999999925';
+our $VERSION='0.999999999926';
 
 
 use 5.005;
